[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tb-go"
version = "0.1.0"
description = "Traceback go - Navigate to lines in tracebacks from the command-line"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
tb-go = "tb_go.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tb_go*"]