[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tb-go"
version = "1.0.0"
description = "Traceback go - Navigate to lines in tracebacks from the command-line"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

authors = [
    {name = "@readwithai", email = "talwrii@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/talwrii/tb-go"

[project.scripts]
tb-go = "tb_go.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tb_go*"]
